# elli_connect

./: .gitignore  Cargo.toml
src/: elli.rs  main.rs  spotify.rs  state.rs  templates.rs  update.rs
src/elli/: connection.rs  elli_connection.rs  messages.rs  mod.rs
static/: index.html
static/css/: styles.css
templates/: base.html  callback.html  connect.html  connected.html  device.html  error.html  index.html  notrack.html
