[package]
name = "elli-spotify"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-files = "0.6.6"
askama = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
url = "2.5.4"
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.140"
image = "0.25.6"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-util = "0.3.30"
tokio = { version = "1.46.1", features = ["full", "test-util", "macros", "rt-multi-thread"] }



[build-dependencies]
askama = "0.14.0"
